fixed spacing in puzzle-level

--- a/public/css/puzzle-levels.css
+++ b/public/css/puzzle-levels.css
@@ -131,7 +131,7 @@ div.header {
 .levels {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     height: 100%;
     border-radius: 5px;
